# pipbrew-cleaner

./: .gitignore  CONTRIBUTING.md  LICENCE.md  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish.yml
pipbrew_cleaner/: __init__.py  __main__.py  brew_manager.py  main.py  pip_manager.py
tests/: test_brew_manager.py  test_pip_manager.py
