[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pipbrew-cleaner"
version = "0.1.0"
description = "Interactive CLI tool to list and uninstall pip and Homebrew packages"
readme = "README.md"
requires-python = ">=3.8"
authors = [{ name = "Korben", email = "korben@korben.info" }]
keywords = ["pip", "brew", "package-manager", "cleanup", "maintenance", "utility"]
# The tool uses only the Python standard library: no runtime dependencies.
dependencies = []
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Intended Audience :: System Administrators",
    "License :: OSI Approved :: MIT License",
    "Operating System :: MacOS :: MacOS X",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: System :: Systems Administration",
    "Topic :: Utilities",
]

[project.optional-dependencies]
test = ["pytest>=7.0"]

[project.urls]
Homepage = "https://github.com/korben00/pipbrew-cleaner"
"Bug Reports" = "https://github.com/korben00/pipbrew-cleaner/issues"
Source = "https://github.com/korben00/pipbrew-cleaner"

[project.scripts]
pipbrew-cleaner = "pipbrew_cleaner.main:main"

[tool.setuptools]
packages = ["pipbrew_cleaner"]
license-files = ["LICENSE.md"]
